# zephyr

arch/arm64/core/: Kconfig  cache.c
boards/arm64/qemu_cortex_a53/: Kconfig.defconfig  qemu_cortex_a53_ivshmem.dts  qemu_cortex_a53_ivshmem_defconfig  qemu_cortex_a53_ivshmem_smp.dts  qemu_cortex_a53_ivshmem_smp_defconfig  qemu_cortex_a53_remote.dts  qemu_cortex_a53_remote_defconfig
boards/arm64/rpi4_cortex_a72/: Kconfig.board  Kconfig.defconfig  board.cmake  rpi4_cortex_a72.dts  rpi4_cortex_a72_defconfig
boards/arm64/rpi_4b/: Kconfig.defconfig  board.cmake  rpi_4b_ivshmem.dts  rpi_4b_ivshmem_defconfig  rpi_4b_remote.dts  rpi_4b_remote_defconfig
drivers/interrupt_controller/: intc_gic.c  intc_gicv3.c
drivers/ipm/: CMakeLists.txt  Kconfig  ipm_gic_sgi.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.rpmsg_uart  uart_pl011.c  uart_rpmsg.c
drivers/virtualization/: virt_ivshmem.c
dts/arm64/broadcom/: bcm2711.dtsi  rpi4-a72.dtsi
dts/arm64/qemu/: qemu-virt-a53.dtsi
dts/bindings/ipm/: arm,gic-sgi.yaml
dts/bindings/serial/: zephy,rpmsg-uart.yaml
include/zephyr/: kernel.h
include/zephyr/ipc/: rpmsg_service.h
lib/open-amp/: resource_table.c  resource_table.h
samples/hello_world/src/: main.c
samples/subsys/ipc/openamp/remote/: CMakeLists.txt  prj_qemu_cortex_a53.conf
samples/subsys/ipc/openamp/remote/boards/: qemu_cortex_a53.overlay
samples/subsys/ipc/openamp/remote/src/: main.c
soc/arm64/bcm2711/: CMakeLists.txt  mmu_regions.c  rsc_table_linker.ld
soc/arm64/qemu_cortex_a53/: CMakeLists.txt  linker.ld  mmu_regions.c
(+22 files in other folders)
